name:           QueryArrow-db-sql-hdbc-common
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.SQL.HDBC
  build-depends:
                   base >= 4,
                   aeson,
                   containers,
                   mtl,
                   transformers,
                   HDBC,
                   convertible,
                   text >= 1.2.1.1,
                   hslogger,
                   vector,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   data-some,
                   QueryArrow-db-sql-common,
                   QueryArrow-common
  ghc-options:     -Wall -fPIC
  other-modules:
