name:           QueryArrow-db-sql-hdbc-sqlite3
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.SQL.HDBC.Sqlite3
  build-depends:
                   base >= 4,
                   aeson,
                   HDBC-sqlite3,
                   heterogeneous-list,
                   QueryArrow-common,
                   QueryArrow-db-sql-common,
                   QueryArrow-db-sql-hdbc-common
  ghc-options:     -Wall -fPIC
  other-modules:
