name:           QueryArrow-db-sql-libpq-postgresql
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.SQL.LibPQ.PostgreSQL
                   QueryArrow.SQL.LibPQ
  build-depends:
                   base >= 4,
                   aeson,
                   binary,
                   bytestring,
                   containers,
                   mtl,
                   transformers,
                   convertible,
                   text >= 1.2.1.1,
                   hslogger,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   QueryArrow-db-sql-common,
                   postgresql-libpq,
                   QueryArrow-common
  ghc-options:     -Wall -fPIC
  other-modules:
