name:           QueryArrow-elastic
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.ElasticSearch.ElasticSearch
                   QueryArrow.ElasticSearch.ElasticSearchConnection
                   QueryArrow.ElasticSearch.ESQL
                   QueryArrow.ElasticSearch.Query
                   QueryArrow.ElasticSearch.QueryResult
                   QueryArrow.ElasticSearch.QueryResultHits
                   QueryArrow.ElasticSearch.ICAT
                   QueryArrow.ElasticSearch.Record
                   QueryArrow.HTTP.ElasticSearchUtils
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   HDBC-sqlite3,
                   HDBC-postgresql,
                   HDBC,
                   aeson,
                   bytestring,
                   haskell-neo4j-client,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   temporary,
                   process,
                   distributive,
                   pretty-tree,
                   conduit-combinators,
                   conduit,
                   http-conduit,
                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   monad-control,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   network,
                   conduit-extra,
                   monad-logger,
                   fast-logger,
                   constraints,
                   lrucache,
                   QueryArrow-common,
                   template-haskell
  ghc-options:     -Wall -fPIC
  other-modules:
