name:           QueryArrow-ffi-c-local
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.C.Local
  build-depends:
                   base >= 4,
                   hslogger,
                   QueryArrow-ffi-service,
                   QueryArrow-ffi-service-local
  ghc-options:     -Wall -fPIC -shared -dynamic
  other-modules:
