name:           QueryArrow-ffi-c-unixdomainsocket
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.C.UnixDomainSocket
  build-depends:
                   base >= 4,
                   hslogger,
                   QueryArrow-ffi-service,
                   QueryArrow-ffi-service-unixdomainsocket
  ghc-options:     -Wall -fPIC -shared -dynamic
  other-modules:
