name:           QueryArrow-ffi-c-unixdomainsocket
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.C.UnixDomainSocket
  build-depends:
                   base >= 4,
                   hslogger,
                   QueryArrow-ffi-service,
                   QueryArrow-ffi-service-unixdomainsocket,
                   QueryArrow-ffi-service-handle-common
  ghc-options:     -Wall -fPIC -shared -dynamic
  other-modules:
