name:           QueryArrow-ffi-c
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.C.Plugin QueryArrow.FFI.C.Template QueryArrow.FFI.C.PluginGen
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   aeson,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   temporary,
                   process,


                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   monad-control,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   monad-logger,
                   fast-logger,
                   constraints,
                   either,
                   QueryArrow-common,
                   QueryArrow-trans,
                   QueryArrow-ffi-service,
                   QueryArrow-sql-common,
                   QueryArrow-gen,
                   QueryArrow-sql-postgresql,
                   template-haskell
  ghc-options:     -Wall -fPIC -shared -dynamic
  other-modules:
