name:           QueryArrow-ffi-genquery
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.GenQuery.Translate QueryArrow.FFI.GenQuery.Parser QueryArrow.FFI.GenQuery.Data
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   unordered-containers,
                   text >= 1.2.1.1,
                   hslogger,
                   namespace >= 0.1.2.2,
                   either,
                   QueryArrow-common,
                   QueryArrow-db-sql-hdbc-common,
                   QueryArrow-ffi-service
  ghc-options:     -Wall -fPIC
  other-modules:
