name:           QueryArrow-ffi-service-local
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.Service.Local
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   semigroupoids,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   process,
                   
                   resourcet,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   monad-control,
                   monad-logger,
                   fast-logger,
                   constraints,
                   either,
                   QueryArrow-common,
                   QueryArrow,
                   QueryArrow-ffi-service
  ghc-options:     -Wall -fPIC
  other-modules:
