name:           QueryArrow-ffi-service-tcp
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

executable JSONSend
  hs-source-dirs:  src
  main-is:         JSONSend.hs
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   aeson,
                   semigroups,
                   semigroupoids,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   resourcet,
                   hslogger,
                   utf8-string,
                   monad-logger,
                   fast-logger,
                   constraints,
                   either,
                   network,
                   QueryArrow-rpc-common,
                   QueryArrow-common,
                   QueryArrow,
                   QueryArrow-ffi-service,
                   QueryArrow-ffi-service-handle-common
  ghc-options:     -Wall
  other-modules:
library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.Service.TCP
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   aeson,
                   semigroups,
                   semigroupoids,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   process,

                   resourcet,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   monad-control,
                   monad-logger,
                   fast-logger,
                   constraints,
                   either,
                   network,
                   QueryArrow-rpc-common,
                   QueryArrow-common,
                   QueryArrow,
                   QueryArrow-ffi-service
  ghc-options:     -Wall -fPIC
  other-modules:
