name:           QueryArrow-ffi-service-tcp
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.Service.TCP
  build-depends:
                   base >= 4,
                   mtl,
                   aeson,
                   bytestring,
                   text >= 1.2.1.1,
                   hslogger,
                   either,
                   network,
                   QueryArrow-ffi-service,
                   QueryArrow-ffi-service-handle-common
  ghc-options:     -Wall -fPIC
  other-modules:
