name:           QueryArrow-ffi-service-unixdomainsocket
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

executable JSONSend
  hs-source-dirs:  src
  main-is:         JSONSend.hs
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   aeson,
                   semigroups,
                   semigroupoids,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   hslogger,
                   either,
                   network,
                   QueryArrow-rpc-common,
                   QueryArrow-common,
                   QueryArrow,
                   QueryArrow-ffi-service
  ghc-options:     -Wall
  other-modules:
library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.FFI.Service.UnixDomainSocket
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   aeson,
                   semigroups,
                   semigroupoids,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   process,

                   resourcet,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   monad-control,
                   monad-logger,
                   fast-logger,
                   constraints,
                   either,
                   network,
                   QueryArrow-rpc-common,
                   QueryArrow-common,
                   QueryArrow,
                   QueryArrow-ffi-service
  ghc-options:     -Wall -fPIC
  other-modules:
