name:           QueryArrow-ffi-service
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.Data.Abstract QueryArrow.Data.PredicatesGen QueryArrow.Data.Template
                   QueryArrow.FFI.Auxiliary QueryArrow.FFI.Service
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   semigroupoids,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   process,
                   distributive,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   monad-control,
                   namespace >= 0.1.2.2,
                   monad-logger,
                   fast-logger,
                   constraints,
                   either,
                   QueryArrow-common,
                   QueryArrow-sql-common,
                   template-haskell
  ghc-options:     -Wall -fPIC
  other-modules:
